修复字符串转URI在linux下的bug