@@ -8,7 +8,6 @@ import wang.liangchen.matrix.framework.commons.validation.ValidationUtil;
 import java.io.UnsupportedEncodingException;
 import java.net.*;
 import java.nio.charset.Charset;
-import java.nio.file.InvalidPathException;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.stream.Collectors;
@@ -23,29 +22,34 @@ public enum URIUtil {
     INSTANCE;
 
     public URI toURI(String uriString, String... more) {
-        ValidationUtil.INSTANCE.notBlank(ExceptionLevel.WARN,uriString, "uriString must not be blank");
+        ValidationUtil.INSTANCE.notBlank(ExceptionLevel.WARN, uriString, "uriString must not be blank");
         try {
+            return new URL(resolveURIString(uriString, more)).toURI();
+        } catch (MalformedURLException | URISyntaxException e) {
             return Paths.get(resolveURIString(uriString, more)).toUri();
-        } catch (InvalidPathException e) {
-            return URI.create(resolveURIString(uriString, more));
         }
     }
 
     public URL toURL(String urlString, String... more) {
+        ValidationUtil.INSTANCE.notBlank(ExceptionLevel.WARN, urlString, "urlString must not be blank");
         try {
-            return toURI(urlString, more).toURL();
+            return new URL(resolveURIString(urlString, more));
         } catch (MalformedURLException e) {
-            throw new MatrixErrorException(e);
+            try {
+                return Paths.get(resolveURIString(urlString, more)).toUri().toURL();
+            } catch (MalformedURLException ex) {
+                throw new MatrixErrorException(ex);
+            }
         }
     }
 
     public URI expandURI(URI uri, String... more) {
-        ValidationUtil.INSTANCE.notNull(ExceptionLevel.WARN,uri, "uri must not be null");
+        ValidationUtil.INSTANCE.notNull(ExceptionLevel.WARN, uri, "uri must not be null");
         return URI.create(resolveURIString(uri.toString(), more));
     }
 
     public URL expendURL(URL url, String... more) {
-        ValidationUtil.INSTANCE.notNull(ExceptionLevel.WARN,url, "url must not be null");
+        ValidationUtil.INSTANCE.notNull(ExceptionLevel.WARN, url, "url must not be null");
         try {
             return new URL(resolveURIString(url.toString(), more));
         } catch (MalformedURLException e) {
